# nearest-point-on-circle

./: CMakeLists.txt  README.md
include/: geometry.h
src/: geometry.cpp  main.cpp
tests/: test.cpp
